--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Diego Kiedanski
-description: "ML Engineer @ Tryolabs | Ph.D from I.P. Paris"
+title: Diego Kiedanski, Ph. D
+description: "ML Engineer @ Tryolabs"
 theme: jekyll-theme-minimal
 logo: "assets/img/snowme.jpg"
 personal:
